# Yesod24Store

./: .gitignore  4store_setup.md  LICENSE  README.md  RdfPortal.hs  Settings.hs  Yesod24Store.cabal
config/: routes  settings.yml
templates/: homepage-wrapper.hamlet  homepage.hamlet  homepage.julius  homepage.lucius  main.lucius
